--- a/Zelig/Zelig/RunTime/Framework/Llilum/Devices/Microsoft.Llilum.Devices.csproj
+++ b/Zelig/Zelig/RunTime/Framework/Llilum/Devices/Microsoft.Llilum.Devices.csproj
@@ -64,6 +64,8 @@
     <Compile Include="I2c\I2cChannelInfo.cs" />
     <Compile Include="I2c\I2cDevice.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Pwm\PwmChannel.cs" />
+    <Compile Include="Pwm\PwmPin.cs" />
     <Compile Include="Spi\SpiChannel.cs" />
     <Compile Include="Spi\SpiChannelInfo.cs" />
     <Compile Include="Spi\SpiDevice.cs" />
