--- a/Zelig/Zelig/RunTime/Zelig/Kernel/Kernel.csproj
+++ b/Zelig/Zelig/RunTime/Zelig/Kernel/Kernel.csproj
@@ -98,6 +98,8 @@
     <Compile Include="FrameworkOverrides_Llilum\Devices\Gpio\GpioProvider.cs" />
     <Compile Include="FrameworkOverrides_Llilum\Devices\I2c\I2cDeviceImpl.cs" />
     <Compile Include="FrameworkOverrides_Llilum\Devices\I2c\I2cProvider.cs" />
+    <Compile Include="FrameworkOverrides_Llilum\Devices\Pwm\PwmPinImpl.cs" />
+    <Compile Include="FrameworkOverrides_Llilum\Devices\Pwm\PwmProvider.cs" />
     <Compile Include="FrameworkOverrides_Llilum\Devices\Spi\SpiDeviceImpl.cs" />
     <Compile Include="FrameworkOverrides_Llilum\Devices\Spi\SpiProvider.cs" />
     <Compile Include="FrameworkOverrides_System\IO\MediaManagerImpl.cs" />
